<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbkgtrans"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Register">

    <androidx.cardview.widget.CardView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="@string/tv_Reg"
                    android:textAlignment="center"
                    android:textColor="@color/blue1"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/nameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/tv_Name"
                    android:textSize="15sp"
                    android:textColor="@color/blue1"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/loginText"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/blue1"
                    app:layout_constraintTop_toBottomOf="@id/nameTV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/lastTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/tv_Last"
                    android:textSize="15sp"
                    android:textColor="@color/blue1"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/nameET"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/lastET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/blue1"
                    app:layout_constraintTop_toBottomOf="@id/lastTV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/emailTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/tv_Email"
                    android:textSize="15sp"
                    android:textColor="@color/blue1"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/lastET"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@color/blue1"
                    app:layout_constraintTop_toBottomOf="@id/emailTV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/passTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/tv_Pass"
                    android:textSize="15sp"
                    android:textColor="@color/blue1"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/emailET"
                    app:layout_constraintStart_toStartOf="parent"/>

                <EditText
                    android:id="@+id/passET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/blue1"
                    android:drawableEnd="@drawable/ic_visibility"
                    app:layout_constraintTop_toBottomOf="@id/passTV"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    app:layout_constraintTop_toBottomOf="@id/passET"
                    app:layout_constraintStart_toStartOf="parent">

                    <RadioButton
                        android:id="@+id/rbStudent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_Student"/>

                    <RadioButton
                        android:id="@+id/rbTeacher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_Teacher" />

                </RadioGroup>

                <Button
                    android:id="@+id/btn_Login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/blue1"
                    android:text="@string/tv_Start"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/radioGroup" />

                <TextView
                    android:id="@+id/lblAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    android:textSize="14sp"
                    android:text="@string/tv_Account2"
                    app:layout_constraintEnd_toStartOf="@+id/lblLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_Login"/>

                <TextView
                    android:id="@+id/lblLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="100dp"
                    android:layout_marginBottom="60dp"
                    android:text="@string/tv_ReadyAccount"
                    android:textSize="14sp"
                    android:textStyle="bold|italic"
                    android:textColor="@color/blue1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/lblAccount"
                    app:layout_constraintTop_toBottomOf="@+id/btn_Login"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>