<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    tools:context=".Custom.Editprofile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/uploadimg"
        app:civ_border_color="@color/blue1"
        app:civ_border_width="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/tv_Name"
        android:textSize="15sp"
        android:textColor="@color/blue1"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/imgProfile"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/blue1"
        app:layout_constraintTop_toBottomOf="@id/nameTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/lastTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/tv_Last"
        android:textSize="15sp"
        android:textColor="@color/blue1"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/nameET"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/lastET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/blue1"
        app:layout_constraintTop_toBottomOf="@id/lastTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/tv_Email"
        android:textSize="15sp"
        android:textColor="@color/blue1"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/lastET"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/blue1"
        android:enabled="false"
        app:layout_constraintTop_toBottomOf="@id/emailTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/phoneTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/tv_Phone"
        android:textSize="15sp"
        android:textColor="@color/blue1"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/emailET"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/phoneET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text|phone"
        android:backgroundTint="@color/blue1"
        app:layout_constraintTop_toBottomOf="@id/phoneTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/streetTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/tv_Address"
        android:textSize="15sp"
        android:textColor="@color/blue1"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/phoneET"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/streetET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="text"
        android:backgroundTint="@color/blue1"
        app:layout_constraintTop_toBottomOf="@id/streetTV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/blue1"
        android:text="@string/tv_Save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/streetET" />

</androidx.constraintlayout.widget.ConstraintLayout>