<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Recursos">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/titleName"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:text="@string/tv_bien"
            android:textSize="38sp"
            android:textColor="@color/blue1"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imaLogo"/>

        <TextView
            android:id="@+id/txtOption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_opt"
            android:textSize="14sp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleName"
            app:layout_constraintEnd_toStartOf="@id/imaLogo"/>
        
        <ImageView
            android:id="@+id/imaLogo"
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:src="@drawable/logocolortrans"
            android:contentDescription="@string/app_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@id/titleName"/>

        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imaLogo">

            <androidx.cardview.widget.CardView
                android:id="@+id/categoryCard"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/categoryName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_invitation"
                        android:textColor="@color/blue1"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/categoryImage"/>
                    
                    <ImageView
                        android:id="@+id/categoryImage"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_invitation"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/categoryCard2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/categoryName2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_Books"
                        android:textColor="@color/blue1"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/categoryImage2"/>

                    <ImageView
                        android:id="@+id/categoryImage2"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_books"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row1">

            <androidx.cardview.widget.CardView
                android:id="@+id/categoryCard3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/categoryName3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_Videos"
                        android:textColor="@color/blue1"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/categoryImage3"/>

                    <ImageView
                        android:id="@+id/categoryImage3"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_videos"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/categoryCard4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/categoryName4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_consul"
                        android:textColor="@color/blue1"
                        android:textSize="20sp"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@id/categoryImage4"/>

                    <ImageView
                        android:id="@+id/categoryImage4"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_consul"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>